--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -18,7 +18,7 @@ driver_config:
 provisioner:
   name: chef_zero
   # require_chef_omnibus: 11.16.4
-  require_chef_omnibus: 12.0.0
+  require_chef_omnibus: 12.0.3
 
 platforms:
 - name: centos-5.8
@@ -64,21 +64,30 @@ platforms:
 #   run_list:
 #   - recipe[selinux::disabled]
 
-- name: fedora-20
-  driver_plugin: digital_ocean
-  driver_config:
-    size: 2gb
-    image: fedora-20-x64
-    region: <%= ENV['DIGITAL_OCEAN_REGION'] %>
-    ssh_key_ids: <%= ENV['DIGITAL_OCEAN_SSH_KEY_IDS'] %>
-    ssh_key: <%= ENV['DIGITAL_OCEAN_SSH_KEY_PATH'] %>
+# - name: redhat-7.0
+#   driver_plugin: ec2
+#   driver_config:
+#     image_id: ami-a8d369c0
+#     username: ec2-user
+#     ssh_key: <%= ENV['EC2_SSH_KEY_PATH'] %>
+#   run_list:
+#   - recipe[selinux::disabled]
 
-- name: suse-11.3
-  driver_plugin: ec2
-  driver_config:
-    image_id: ami-e8084981
-    username: root
-    ssh_key: <%= ENV['EC2_SSH_KEY_PATH'] %>
+# - name: fedora-20
+#   driver_plugin: digital_ocean
+#   driver_config:
+#     size: 2gb
+#     image: fedora-20-x64
+#     region: <%= ENV['DIGITAL_OCEAN_REGION'] %>
+#     ssh_key_ids: <%= ENV['DIGITAL_OCEAN_SSH_KEY_IDS'] %>
+#     ssh_key: <%= ENV['DIGITAL_OCEAN_SSH_KEY_PATH'] %>
+
+# - name: suse-11.3
+#   driver_plugin: ec2
+#   driver_config:
+#     image_id: ami-e8084981
+#     username: root
+#     ssh_key: <%= ENV['EC2_SSH_KEY_PATH'] %>
 
 - name: debian-7.0
   driver_plugin: gce
