adding ubuntu-10.04 to .kitchen.yml

--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -172,6 +172,7 @@ suites:
       'debian-7.2',
       'omnios-151006',
       'smartos-13.4.0',
+      'ubuntu-10.04',
       'ubuntu-12.04',
       'ubuntu-13.10',
     ]
@@ -273,6 +274,7 @@ suites:
       'debian-7.2',
       'omnios-151006',
       'smartos-13.4.0',
+      'ubuntu-10.04',
       'ubuntu-12.04'
     ]
     attributes:
