--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -73,14 +73,14 @@ platforms:
 #   run_list:
 #   - recipe[selinux::disabled]
 
-# - name: fedora-20
-#   driver_plugin: digital_ocean
-#   driver_config:
-#     size: 2gb
-#     image: fedora-20-x64
-#     region: <%= ENV['DIGITAL_OCEAN_REGION'] %>
-#     ssh_key_ids: <%= ENV['DIGITAL_OCEAN_SSH_KEY_IDS'] %>
-#     ssh_key: <%= ENV['DIGITAL_OCEAN_SSH_KEY_PATH'] %>
+- name: fedora-20
+  driver_plugin: digital_ocean
+  driver_config:
+    size: 2gb
+    image: fedora-20-x64
+    region: <%= ENV['DIGITAL_OCEAN_REGION'] %>
+    ssh_key_ids: <%= ENV['DIGITAL_OCEAN_SSH_KEY_IDS'] %>
+    ssh_key: <%= ENV['DIGITAL_OCEAN_SSH_KEY_PATH'] %>
 
 # - name: suse-11.3
 #   driver_plugin: ec2
@@ -169,7 +169,7 @@ suites:
       'amazon-2014.09',
       'centos-5.8',
       'centos-6.5',
-      'debian-7.2',
+      'debian-7.0',
       'omnios-151006',
       'smartos-13.4.0',
       'ubuntu-10.04',
@@ -190,7 +190,7 @@ suites:
       'amazon-2014.03',
       'centos-5.8',
       'centos-6.5',
-      'debian-7.2',
+      'debian-7.0',
       'omnios-151006',
       'smartos-13.4.0',
       'ubuntu-12.04',
@@ -271,7 +271,7 @@ suites:
       'amazon-2014.09',
       'centos-5.8',
       'centos-6.5',
-      'debian-7.2',
+      'debian-7.0',
       'omnios-151006',
       'smartos-13.4.0',
       'ubuntu-10.04',
